:hammer: Fixed layout issue on Firefox

--- a/styles/_books.scss
+++ b/styles/_books.scss
@@ -75,5 +75,6 @@
         border-radius: 30px 30px 0 0;
         transform: scale(110%) translateY(-4%);
         border-bottom: 10px solid colour(secondary);
+        flex-shrink: 0;
     }
 }
