--- a/styles/style.css
+++ b/styles/style.css
@@ -296,6 +296,7 @@ body .header__home {
   border-radius: 30px 30px 0 0;
   transform: scale(110%) translateY(-4%);
   border-bottom: 10px solid #c1d0e0;
+  flex-shrink: 0;
 }
 
 .photos__cards {
